fix z-index for logging out on search page

--- a/app/assets/stylesheets/navBar.css
+++ b/app/assets/stylesheets/navBar.css
@@ -177,7 +177,7 @@
   font-size: .5em;
   border: none;
   color:white;
-  z-index: 2;
+  z-index: 4;
   cursor: pointer;
 }
 
