--- a/app/assets/stylesheets/searchPage.scss
+++ b/app/assets/stylesheets/searchPage.scss
@@ -123,7 +123,7 @@
   padding-bottom: 4px;
   position: fixed;
   padding: 35px 0 10px 0;
-  z-index: 5;
+  z-index: 3;
   background: white;
 }
 
